<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widget_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/widget_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/widget_toolbar_bg"
        android:padding="@dimen/widget_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/widget_config_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_settings_white_24dp"
            android:contentDescription="@string/settings" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_toolbar"
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin">

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:maxLines="3"
            android:minLines="1"
            android:scrollbars="vertical"
            android:textStyle="bold"
            android:text="@string/widget_title_text"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/widget_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:minLines="1"
            android:scrollbars="vertical"
            android:text="@string/widget_description_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/widget_margin"
        android:paddingRight="@dimen/widget_margin">

        <Button
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
        <Button
            android:id="@+id/ignoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ignore" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/widgetProgressBanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/loading_data" />
    </RelativeLayout>

</RelativeLayout>